feat: :mag: Busca de Ações pelo Preço
Adesão funcionalidade que busca as ofertas de ações pelo preço igual ou menor ao solicitado

--- a/stocktrade/src/main/resources/static/css/stylesheet.css
+++ b/stocktrade/src/main/resources/static/css/stylesheet.css
@@ -542,11 +542,15 @@ h4 {
 }
 
 .custom-margin-left2{
-  margin-left: 43%;
+  margin-left: 30%;
 }
 
 .margin-table{
   margin-left: 400px;
+}
+
+.margin-left{
+  margin-left: 10px
 }
 
 /* CSS ACORDEAO TABLE COMPRAR */
