--- a/stocktrade/src/main/resources/templates/invistaLogado.html
+++ b/stocktrade/src/main/resources/templates/invistaLogado.html
@@ -27,10 +27,17 @@
         <p class="h3 fs-8 custom-margin-left mt-4">Ativos Disponíveis</p>
         <form method="get" action="invistaLogado" class="d-flex custom-margin-left2">
           <input id="form-busca-acao" class="form-control me-2 input-custom" placeholder="Busque no site..."
-            aria-label="Search" name="busca" />
+            aria-label="Search" name="busca"/>
           <button class="btn btn-outline-success btn-custom" type="submit">
             Pesquisar
           </button>
+          <form method="get" action="invistaLogado" class="d-flex custom-margin-left2">
+            <input id="form-busca-preco" class="form-control me-2 input-custom margin-left" placeholder="Digite o preço máximo..."
+            aria-label="Price" name="preco" />
+            <button class="btn btn-outline-success btn-custom text-nowrap" type="submit">
+            Pesquisar Preço
+            </button>
+          </form>
         </form>
       </div>
 
