refactor: :art: Foi implementado o padrão de projeto Chain of Responsibility para tratar os erros do programa
Foram tratados os erros do programa utilizando o pradrão de projeto

#92

--- a/stocktrade/src/main/resources/templates/cadastro.html
+++ b/stocktrade/src/main/resources/templates/cadastro.html
@@ -206,8 +206,8 @@
             if (response.ok) {
               window.location.href = "/";
             } else {
-              response.json().then(data => {
-                senhaError.textContent = data.message;
+              response.text().then(data => {
+                senhaError.textContent = data;
               });
             }
           })
