--- a/stocktrade/src/main/resources/templates/carteira.html
+++ b/stocktrade/src/main/resources/templates/carteira.html
@@ -281,8 +281,8 @@
             window.location.href = "/carteira";
           } else {
             console.log(response.data);
-            response.json().then(data => {
-              senhaError.textContent = data.message;
+            response.text().then(data => {
+              senhaError.textContent = data;
             });
           }
         })
@@ -342,8 +342,8 @@
             window.location.href = "/carteira";
           } else {
             console.log(response.data);
-            response.json().then(data => {
-              senhaError.textContent = data.message;
+            response.text().then(data => {
+              senhaError.textContent = data;
             });
           }
         })
