feat: :sparkles: Adicionado o header do Adm
Adicionada as verificações das paginas que o Adm pode acessar

--- a/stocktrade/src/main/resources/templates/dividendo.html
+++ b/stocktrade/src/main/resources/templates/dividendo.html
@@ -7,7 +7,7 @@
     <svg xmlns="images/logo-bg-off.png" style="display: none"></svg>
 
     <main>
-        <div th:replace="~{fragments/headerLogadoFragment :: header('indexLogado')}"></div>
+        <div th:replace="~{fragments/headerAdmFragment :: header('indexAdm')}"></div>
 
         <div class="container-fluid justify-content-center pe-5 ps-5">
             <div class="row justify-content-center">
