--- a/stocktrade/src/main/resources/templates/dividendo.html
+++ b/stocktrade/src/main/resources/templates/dividendo.html
@@ -48,10 +48,6 @@
         }
 
         function enviarSolicitacaoVenda(event, sigla, valor) {
-
-            console.log(sigla)
-            console.log(valor)
-
             const data = {
                 sigla: sigla,
                 valor: valor
@@ -66,6 +62,7 @@
             })
                 .then((response) => {
                     if (response.ok) {
+                        alert("Dividendo cadastrado com sucesso!");
                         window.location.href = "/dividendo";
                     } else {
                         console.log(response.data);
@@ -85,7 +82,6 @@
     <script>
         function verificarCasasDecimais(input) {
 
-            console.log("chamou")
             if (input.value !== "") {
                 const precoInput = document.getElementById("precoAcao");
 
