feat: :sparkles: Adição do histórico de movimentações
Adição do histórico de todas as movimentações do usuário

--- a/stocktrade/src/main/resources/templates/fragments/footerLogadoFragment.html
+++ b/stocktrade/src/main/resources/templates/fragments/footerLogadoFragment.html
@@ -27,9 +27,11 @@
 
       <li th:replace="~{fragments/footer/textLinkFooter :: textLinkFooter('/carteira', 'Carteira')}"></li>
 
-      <li th:replace="~{fragments/footer/textLinkFooter :: textLinkFooter('/invista', 'Invista')}"></li>
+      <li th:replace="~{fragments/footer/textLinkFooter :: textLinkFooter('/invistaLogado', 'Invista')}"></li>
       
       <li th:replace="~{fragments/footer/textLinkFooter :: textLinkFooter('/contatoLogado', 'Contato')}"></li>
+
+      <li th:replace="~{fragments/footer/textLinkFooter :: textLinkFooter('/historico', 'Histórico')}"></li>
     </ul>
   </div>
 </footer>
