--- a/stocktrade/src/main/resources/templates/fragments/headerLogadoFragment.html
+++ b/stocktrade/src/main/resources/templates/fragments/headerLogadoFragment.html
@@ -15,6 +15,8 @@
 
       <li th:replace="~{fragments/header/navLinkHeader :: navLinkHeader('/contatoLogado', 'Contato', ${currentPage})}"></li>
 
+      <li th:replace="~{fragments/header/navLinkHeader :: navLinkHeader('/historico', 'Histórico', ${currentPage})}"></li>
+
     </ul>
 
 
